--- a/alembic.ini
+++ b/alembic.ini
@@ -6,7 +6,7 @@ prepend_sys_path = .
 
 version_path_separator = os  
 
-sqlalchemy.url = postgresql+asyncpg://workout:workout@localhost/workout
+sqlalchemy.url = postgresql+asyncpg://postgres:admin55@localhost/workout
 
 [post_write_hooks]
 
